fix - hide overflow bars

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 .unselectable {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
